Fix spacing on selection dropdowns

--- a/app/assets/styles/components/_drops.scss
+++ b/app/assets/styles/components/_drops.scss
@@ -8,6 +8,7 @@
 }
 
 .drop__toggle {
+  margin-top:0.5em;
   &--caret {
     &:after {
       @extend %collecticon-triangle-down;
