--- a/app/assets/styles/components/_selection.scss
+++ b/app/assets/styles/components/_selection.scss
@@ -22,6 +22,8 @@
 
 .selection__panel--attribute {
 	float: left;
+	margin-top: 0.65em;
+	line-height: 1.5;
 }
 
 .selection__panel--drop {
